--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,6 @@
 <body>
 <h1>About me</h1>
 <p>I am Jelena</p>
-<a href="jetzyey.github.io/index.html">back</a>
+<a href="https://jetzyey.github.io/index.html">back</a>
 </body>
 </html>
