--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<a href="jetzyey.github.io/aboutme.html">Research</a>
+<a href="https://jetzyey.github.io/aboutme.html">Research</a>
 </body>
 </html>
