--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html><!-- soma page have complicated inclusions here like xmlns, i don't know if I need that -->
+<head>
+    <link rel="stylesheet" href="mystyle.css">
+</head>
 <body>
-    <h1>Hello World</h1>
+    <div id="canvas">
+        <h1>Hello World</h1>
+        <ul>
+            <li class="main-menu">menue point</li>
+        </ul>
+    </div>
+    
     <p>I'm hosted with GitHub Pages.</p>
     <a href="https://jetzyey.github.io/aboutme.html">Research</a>
+    </div>
+   <footer>
+
+   </footer>
 </body>
 </html>
