--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" href="assets/css/style.css"/>
+</head>
 <body>
     <h1>About me</h1>
     <p>I am Jelena</p>
