--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
 <head>
     <link rel="stylesheet" href="assets/css/style.css"/>
 </head>
-<body>
-    <div id="canvas">
-        <h1>Hello World</h1>
-        <ul>
-            <li class="main-menu">menue point</li>
-        </ul>
-    </div>
-    
-    <p>I'm hosted with GitHub Pages.</p>
-    <a href="https://jetzyey.github.io/aboutme.html">Research</a>
-    </div>
-   <footer>
+    <body>
+        <header class="flex-row">
+            <img class="logo" src="assets/images/logo-pace-holder-copy.png"/>
+            <div class="flex-column identity">
+                <h1 class="name">Jelena Jordanovic-Lewis</h1>
+                <div class="menu flex-row">
+                    <div class="item">portfolio</div>
+                    <div class="item">about me</div>
+                    <div class="item">contact</div>
+                    <div class="logo-spacer"></div>
+                </div>
+            </div>
+        </header>
 
-   </footer>
-</body>
+        <main>
+
+        </main>
+
+        <footer>
+
+        </footer>
+    </body>
 </html>
