--- a/index.html
+++ b/index.html
@@ -9,18 +9,44 @@
             <div class="flex-column identity">
                 <h1 class="name">Jelena Jordanovic-Lewis</h1>
                 <div class="menu flex-row">
-                    <div class="item">portfolio</div>
-                    <div class="item">about me</div>
-                    <div class="item">contact</div>
+                    <div class="item">
+                        <a href="https://jetzyey.github.io/portfolio.html">portfolio</a>
+                    <div class="item">
+                        <a href="https://jetzyey.github.io/aboutme.html">about me</a>
+                    </div>
+                    <div class="item">
+                        <a href="https://jetzyey.github.io/contact.html">contact</a>
+                    </div>
                     <div class="logo-spacer"></div>
                 </div>
             </div>
         </header>
 
         <main>
+            <div class="images">
+                <div class="pics">           
+                    <img src="assets/images/boylost-book.jpg" />
+                    <img src="assets/images/boylost-page1.jpg" />
+                    <img src="assets/images/boylost-page2.jpg" />
+                    <img src="assets/images/boylost-page3.jpg" />
+                    <img src="assets/images/lulu-lamby-book.jpg" />
+                    <img src="assets/images/lulu-lamby-page1.jpg" />
+                    <img src="assets/images/lulu-lamby-page2.jpg" />
+                    <img src="assets/images/mummy-book.jpg" />
+                    <img src="assets/images/mummy-page-1.jpg" />
+                    <img src="assets/images/mummy-page-2.jpg" />
+                    <img src="assets/images/mummy-page-2.jpg" />
+                    <img src="assets/images/teddies-book.jpg" />
+                    <img src="assets/images/teddies-page1.jpg" />
+                    <img src="assets/images/teddies-page2.jpg" />
+                    <img src="assets/images/teddies-page3.jpg" />
+                    <img src="assets/images/three-pigs-page4.jpg" />
+                </div>
+            </div>
 
+            <div class="attention"></div>
+            <iframe class="insta-embed" src="https://instagram.com/jetzyey/embed" ></iframe>
         </main>
-
         <footer>
 
         </footer>
