--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
         </header>
 
-        <main>
+        <div class="main">
             <div class="images">
                 <div class="pics">           
                     <img src="assets/images/boylost-book.jpg" />
@@ -46,7 +46,7 @@
 
             <div class="attention"></div>
             <iframe class="insta-embed" src="https://instagram.com/jetzyey/embed" ></iframe>
-        </main>
+        </div>
         <footer>
 
         </footer>
