--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="assets/css/style.css"/>
 </head>
     <body>
-        <header class="flex-row">
+        <div class="flex-row header">
             <img class="logo" src="assets/images/logo-pace-holder-copy.png"/>
             <div class="flex-column identity">
                 <h1 class="name">Jelena Jordanovic-Lewis</h1>
@@ -20,7 +20,7 @@
                     <div class="logo-spacer"></div>
                 </div>
             </div>
-        </header>
+        </div>
 
         <div class="main">
             <div class="images">
